2001-06-28  Michael Snyder  <msnyder@redhat.com>

	* infrun.c (handle_inferior_event): Replace prev_pc test in all
	calls to bpstat_stop_status (removed in 1999-09-24).  This test
	helps distinguish stepping over a breakpoint trap from stepping
	thru a jump to the instruction after a breakpoint trap.
	(handle_inferior_event): Don't bother writing the PC if
	DECR_PC_AFTER_BREAK is zero (optimization).
	* breakpoint.c (bpstat_stop_status): Add comment explaining the
	purpose and usage of the "not_a_breakpoint" argument in computing
	the breakpoint address.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	From 2000-12-03 Stephane Carrez <Stephane.Carrez@worldnet.fr>:
	* monitor.c (setmem_resp_delim_pattern): New regexp pattern.
	(setreg_resp_delim_pattern): Likewise.
	(setmem_resp_delim_fastmap): New buffer.
	(setreg_resp_delim_fastmap): Likewise.
	(monitor_open): Initialize above regexp if they are defined.
	(monitor_write_memory): Use regexp to check the result of write.
	(monitor_store_register): Likewise to check result of register set.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	From 2000-06-14 John Marshall <john_w_marshall@palm.com>:
	* coff-solib.c: Include symfile.h and objfiles.h to make
	OBJF_SHARED visible.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	* configure.in (--enable-gdbmi): Enable by default.
	* configure: Regenerate.
	* TODO: Update.
	* NEWS: Update

2001-06-28  Joel Brobecker  <brobecker@act-europe.fr>

        * solib-osf.c (osf_in_dynsym_resolve_code): Add a comment
        explaining the consequences of always returning zero. No code
        change.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	From 2001-06-08 Daniel Jacobowitz <djacobowitz@mvista.com>:
	* defs.h (enum target_signal): Add TARGET_SIGNAL_REALTIME_65
	to TARGET_SIGNAL_REALTIME_127.
	* target.c (struct signals): Add SIG63 to SIG127.
	(target_signal_from_host): Handle up to 127 signals.
	(do_target_signal_to_host): Likewise.
	